(library
  (name ppx_deriving_json)
  (public_name js_of_ocaml-ppx_deriving_json)
  (synopsis "[@@deriving json]")
  (ppx_runtime_libraries js_of_ocaml.deriving)
  (kind ppx_deriver)

  (libraries compiler-libs.common
             ocaml-migrate-parsetree
             ppxlib
  )
  (preprocess (pps ppxlib.metaquot)))
